feat-campaign: master campaign (#done)
